@@ -5,6 +5,9 @@ from eea.facetednavigation.interfaces import IWidgetFilterBrains
 from Products.CMFCore.utils import getToolByName
 from DateTime import DateTime
 import operator
+import logging
+
+logger = logging.getLogger('faceted_lastest_version')
 
 
 class WidgetFilterBrains(object):
@@ -33,11 +36,12 @@ class WidgetFilterBrains(object):
             if not version_id:
                 continue
 
+            if not isinstance(version_id, str):
+                logging.warning('%s has a wrong version_id', item.getURL())
             # #75032 the search returns for some brains the lower version,
             # because for the higher version some search criteria are missed.
             # to fix, for all brains we need to run a new query by version_id
             # to have the latest version of these
-
             if version_id in last_versions:
                 continue
 
